# lxmenu-data

./: AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac  configure.in  rename.py
desktop-directories/: Makefile.am  lxde-audio-video.directory.in  lxde-development.directory.in  lxde-education.directory.in  lxde-game.directory.in  lxde-graphics.directory.in  lxde-hardware.directory.in  lxde-internet-and-network.directory.in  lxde-leave.directory.in  lxde-look-and-feel.directory.in  lxde-menu-applications.directory.in  lxde-menu-system.directory.in  lxde-network.directory.in  lxde-office.directory.in  lxde-other.directory.in  lxde-personal.directory.in  lxde-science-math.directory.in  lxde-science.directory.in  lxde-settings-system.directory.in  lxde-settings.directory.in  lxde-system.directory.in  lxde-utility-accessibility.directory.in  lxde-utility.directory.in
layout/: lxde-applications.menu
po/: LINGUAS  Makefile.in  POTFILES.in  af.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  fur.po  fy.po  ga.po  gl.po  gn.po  gu.po  he.po  (+70 more)
